RFPL-2329: Metamer: added profile to support ipv6 (only JBoss AS 7.1 supported by now)